Wed Mar 21 23:19:11 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltInternals.h libxslt/xslt.c libxslt/transform.c
	  libxslt/templates.[ch] libxslt/preproc.c libxslt/extensions.[ch]
	  extended xsltEvalStaticAttrValueTemplate and 
	  xsltEvalAttrValueTemplate to support foreign namespaces,
	  and fixed document()

Mon Mar 19 18:40:40 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* xsltutils.h: cleanup some garbage added last night
	* xsltInternals.h variables.c transform.c templates.[ch]
	  preproc.c pattern.c keys.c: switched the whole XSLt processing
	  to use XPath precompiled expressions and reusing them.
	* functions.c: some cleanup, seems people don't use 
	  unparsed-entity-uri() the way it's supposed to be used

Mon Mar 19 01:08:05 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/keys.c libxslt/templates.c libxslt/transform.c
	  libxslt/variables.c libxslt/xsltutils.h: Changed to work
	  with the new way XPath is interpreted. This doesn't yet
	  take advantage of the separate parsing/evaluation phases

Wed Mar 14 15:51:36 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: robert@xsl.00008.org pointed out a
	  problem in xsl:copy-of in case of attributes
	* tests/docs/Makefile.am tests/docs/bug-3-.xml
	  tests/general/Makefile.am tests/general/bug-3-.*:
	  added the test to the general regression suite

Wed Mar 14 14:21:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c: applied and fixed ptittom@free.fr patch
	  fixing some of the missing functionnalities in the XSLT
	  functions implementations.
	  
Tue Mar 13 14:38:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: nick@debian.org forwarded a fix

Tue Mar 13 10:29:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* README.cvs-commits: added, pointing to HACKING
	* HACKING: added defines commit rules.

Mon Mar 12 14:43:20 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
