@@ -121,7 +121,7 @@ NAME="LIBXSLT-IMPORTS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN2127"
+NAME="AEN2139"
 ></A
 ><H2
 >Name</H2
@@ -129,7 +129,7 @@ NAME="AEN2127"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN2130"
+NAME="AEN2142"
 ></A
 ><H2
 >Synopsis</H2
@@ -220,7 +220,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2152"
+NAME="AEN2164"
 ></A
 ><H2
 >Description</H2
@@ -230,14 +230,14 @@ NAME="AEN2152"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2155"
+NAME="AEN2167"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2157"
+NAME="AEN2169"
 ></A
 ><H3
 ><A
@@ -329,7 +329,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2179"
+NAME="AEN2191"
 ></A
 ><H3
 ><A
@@ -421,7 +421,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2201"
+NAME="AEN2213"
 ></A
 ><H3
 ><A
@@ -506,7 +506,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2222"
+NAME="AEN2234"
 ></A
 ><H3
 ><A
@@ -591,7 +591,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2243"
+NAME="AEN2255"
 ></A
 ><H3
 ><A
@@ -672,7 +672,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2264"
+NAME="AEN2276"
 ></A
 ><H3
 ><A
@@ -773,7 +773,7 @@ should be CDTATA wrapped.</TD
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2289"
+NAME="AEN2301"
 ></A
 ><H3
 ><A
