@@ -121,7 +121,7 @@ NAME="LIBXSLT-NAMESPACES"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN2325"
+NAME="AEN2337"
 ></A
 ><H2
 >Name</H2
@@ -129,7 +129,7 @@ NAME="AEN2325"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN2328"
+NAME="AEN2340"
 ></A
 ><H2
 >Synopsis</H2
@@ -235,7 +235,7 @@ HREF="libxslt-xsltinternals.html#XSLTSTYLESHEETPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2354"
+NAME="AEN2366"
 ></A
 ><H2
 >Description</H2
@@ -245,14 +245,14 @@ NAME="AEN2354"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2357"
+NAME="AEN2369"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2359"
+NAME="AEN2371"
 ></A
 ><H3
 ><A
@@ -337,7 +337,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2380"
+NAME="AEN2392"
 ></A
 ><H3
 ><A
@@ -483,7 +483,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2416"
+NAME="AEN2428"
 ></A
 ><H3
 ><A
@@ -646,7 +646,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2456"
+NAME="AEN2468"
 ></A
 ><H3
 ><A
@@ -776,7 +776,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2488"
+NAME="AEN2500"
 ></A
 ><H3
 ><A
