@@ -109,7 +109,7 @@ NAME="LIBXSLT-NUMBERSINTERNALS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN3495"
+NAME="AEN3507"
 ></A
 ><H2
 >Name</H2
@@ -117,7 +117,7 @@ NAME="AEN3495"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN3498"
+NAME="AEN3510"
 ></A
 ><H2
 >Synopsis</H2
@@ -176,7 +176,7 @@ HREF="XMLNODEPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3511"
+NAME="AEN3523"
 ></A
 ><H2
 >Description</H2
@@ -186,14 +186,14 @@ NAME="AEN3511"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3514"
+NAME="AEN3526"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3516"
+NAME="AEN3528"
 ></A
 ><H3
 ><A
@@ -335,7 +335,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3551"
+NAME="AEN3563"
 ></A
 ><H3
 ><A
