@@ -121,7 +121,7 @@ NAME="LIBXSLT-TRANSFORM"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN900"
+NAME="AEN912"
 ></A
 ><H2
 >Name</H2
@@ -129,7 +129,7 @@ NAME="AEN900"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN903"
+NAME="AEN915"
 ></A
 ><H2
 >Synopsis</H2
@@ -504,7 +504,7 @@ HREF="libxslt-xsltinternals.html#XSLTSTYLEPRECOMPPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN999"
+NAME="AEN1011"
 ></A
 ><H2
 >Description</H2
@@ -514,14 +514,14 @@ NAME="AEN999"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN1002"
+NAME="AEN1014"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1004"
+NAME="AEN1016"
 ></A
 ><H3
 ><A
@@ -624,7 +624,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1030"
+NAME="AEN1042"
 ></A
 ><H3
 ><A
@@ -747,7 +747,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1060"
+NAME="AEN1072"
 ></A
 ><H3
 ><A
@@ -873,7 +873,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1091"
+NAME="AEN1103"
 ></A
 ><H3
 ><A
@@ -999,7 +999,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1122"
+NAME="AEN1134"
 ></A
 ><H3
 ><A
@@ -1125,7 +1125,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1153"
+NAME="AEN1165"
 ></A
 ><H3
 ><A
@@ -1251,7 +1251,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1184"
+NAME="AEN1196"
 ></A
 ><H3
 ><A
@@ -1377,7 +1377,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1215"
+NAME="AEN1227"
 ></A
 ><H3
 ><A
@@ -1503,7 +1503,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1246"
+NAME="AEN1258"
 ></A
 ><H3
 ><A
@@ -1629,7 +1629,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1277"
+NAME="AEN1289"
 ></A
 ><H3
 ><A
@@ -1755,7 +1755,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1308"
+NAME="AEN1320"
 ></A
 ><H3
 ><A
@@ -1881,7 +1881,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1339"
+NAME="AEN1351"
 ></A
 ><H3
 ><A
@@ -2007,7 +2007,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1370"
+NAME="AEN1382"
 ></A
 ><H3
 ><A
@@ -2133,7 +2133,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1401"
+NAME="AEN1413"
 ></A
 ><H3
 ><A
@@ -2259,7 +2259,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1432"
+NAME="AEN1444"
 ></A
 ><H3
 ><A
@@ -2385,7 +2385,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1463"
+NAME="AEN1475"
 ></A
 ><H3
 ><A
@@ -2511,7 +2511,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1494"
+NAME="AEN1506"
 ></A
 ><H3
 ><A
@@ -2637,7 +2637,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1525"
+NAME="AEN1537"
 ></A
 ><H3
 ><A
@@ -2763,7 +2763,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1556"
+NAME="AEN1568"
 ></A
 ><H3
 ><A
