@@ -121,7 +121,7 @@ NAME="LIBXSLT-XSLTINTERNALS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN3050"
+NAME="AEN3062"
 ></A
 ><H2
 >Name</H2
@@ -129,7 +129,7 @@ NAME="AEN3050"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN3053"
+NAME="AEN3065"
 ></A
 ><H2
 >Synopsis</H2
@@ -372,7 +372,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3115"
+NAME="AEN3127"
 ></A
 ><H2
 >Description</H2
@@ -382,14 +382,14 @@ NAME="AEN3115"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3118"
+NAME="AEN3130"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3120"
+NAME="AEN3132"
 ></A
 ><H3
 ><A
@@ -418,7 +418,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3125"
+NAME="AEN3137"
 ></A
 ><H3
 ><A
@@ -453,7 +453,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3130"
+NAME="AEN3142"
 ></A
 ><H3
 ><A
@@ -479,7 +479,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3135"
+NAME="AEN3147"
 ></A
 ><H3
 ><A
@@ -505,7 +505,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3140"
+NAME="AEN3152"
 ></A
 ><H3
 ><A
@@ -542,7 +542,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3145"
+NAME="AEN3157"
 ></A
 ><H3
 ><A
@@ -568,7 +568,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3150"
+NAME="AEN3162"
 ></A
 ><H3
 ><A
@@ -622,7 +622,7 @@ struct _xsltDocument {
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3155"
+NAME="AEN3167"
 ></A
 ><H3
 ><A
@@ -723,7 +723,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3160"
+NAME="AEN3172"
 ></A
 ><H3
 ><A
@@ -749,7 +749,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3165"
+NAME="AEN3177"
 ></A
 ><H3
 ><A
@@ -815,7 +815,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3170"
+NAME="AEN3182"
 ></A
 ><H3
 ><A
@@ -841,7 +841,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3175"
+NAME="AEN3187"
 ></A
 ><H3
 ><A
@@ -895,8 +895,11 @@ CLASS="PROGRAMLISTING"
 
     int      ver11;		/* document */
     xmlChar *filename;		/* document URL */
+    int      has_filename;	/* document */
 
     xsltNumberData numdata;	/* number */
+
+    xmlXPathCompExprPtr comp;	/* a precompiled XPath expression */
 };</PRE
 ></TD
 ></TR
@@ -907,7 +910,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3180"
+NAME="AEN3192"
 ></A
 ><H3
 ><A
@@ -933,7 +936,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3185"
+NAME="AEN3197"
 ></A
 ><H3
 ><A
@@ -1057,7 +1060,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3215"
+NAME="AEN3227"
 ></A
 ><H3
 ><A
@@ -1101,7 +1104,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3220"
+NAME="AEN3232"
 ></A
 ><H3
 ><A
@@ -1131,7 +1134,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3225"
+NAME="AEN3237"
 ></A
 ><H3
 ><A
@@ -1161,7 +1164,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3230"
+NAME="AEN3242"
 ></A
 ><H3
 ><A
@@ -1187,7 +1190,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3235"
+NAME="AEN3247"
 ></A
 ><H3
 ><A
@@ -1213,7 +1216,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3240"
+NAME="AEN3252"
 ></A
 ><H3
 ><A
@@ -1239,7 +1242,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3245"
+NAME="AEN3257"
 ></A
 ><H3
 ><A
@@ -1300,7 +1303,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3261"
+NAME="AEN3273"
 ></A
 ><H3
 ><A
@@ -1381,7 +1384,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3282"
+NAME="AEN3294"
 ></A
 ><H3
 ><A
@@ -1449,7 +1452,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3299"
+NAME="AEN3311"
 ></A
 ><H3
 ><A
@@ -1527,7 +1530,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3319"
+NAME="AEN3331"
 ></A
 ><H3
 ><A
@@ -1595,7 +1598,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3336"
+NAME="AEN3348"
 ></A
 ><H3
 ><A
@@ -1698,7 +1701,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3362"
+NAME="AEN3374"
 ></A
 ><H3
 ><A
@@ -1801,7 +1804,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3388"
+NAME="AEN3400"
 ></A
 ><H3
 ><A
@@ -1886,7 +1889,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3409"
+NAME="AEN3421"
 ></A
 ><H3
 ><A
@@ -1967,7 +1970,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3430"
+NAME="AEN3442"
 ></A
 ><H3
 ><A
@@ -2070,7 +2073,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3455"
+NAME="AEN3467"
 ></A
 ><H3
 ><A
