@@ -121,7 +121,7 @@ NAME="LIBXSLT-XSLTUTILS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN1592"
+NAME="AEN1604"
 ></A
 ><H2
 >Name</H2
@@ -129,7 +129,7 @@ NAME="AEN1592"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN1595"
+NAME="AEN1607"
 ></A
 ><H2
 >Synopsis</H2
@@ -318,7 +318,7 @@ HREF="libxslt-xsltinternals.html#XSLTSTYLESHEETPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN1641"
+NAME="AEN1653"
 ></A
 ><H2
 >Description</H2
@@ -328,14 +328,14 @@ NAME="AEN1641"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN1644"
+NAME="AEN1656"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1646"
+NAME="AEN1658"
 ></A
 ><H3
 ><A
@@ -411,7 +411,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1665"
+NAME="AEN1677"
 ></A
 ><H3
 ><A
@@ -511,7 +511,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1690"
+NAME="AEN1702"
 ></A
 ><H3
 ><A
@@ -590,7 +590,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1709"
+NAME="AEN1721"
 ></A
 ><H3
 ><A
@@ -616,7 +616,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1714"
+NAME="AEN1726"
 ></A
 ><H3
 ><A
@@ -642,7 +642,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1719"
+NAME="AEN1731"
 ></A
 ><H3
 ><A
@@ -700,7 +700,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1733"
+NAME="AEN1745"
 ></A
 ><H3
 ><A
@@ -775,7 +775,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1751"
+NAME="AEN1763"
 ></A
 ><H3
 ><A
@@ -801,7 +801,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1756"
+NAME="AEN1768"
 ></A
 ><H3
 ><A
@@ -827,7 +827,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1761"
+NAME="AEN1773"
 ></A
 ><H3
 ><A
@@ -853,7 +853,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1766"
+NAME="AEN1778"
 ></A
 ><H3
 ><A
@@ -879,7 +879,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1771"
+NAME="AEN1783"
 ></A
 ><H3
 ><A
@@ -984,7 +984,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1797"
+NAME="AEN1809"
 ></A
 ><H3
 ><A
@@ -1096,7 +1096,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1822"
+NAME="AEN1834"
 ></A
 ><H3
 ><A
@@ -1208,7 +1208,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1847"
+NAME="AEN1859"
 ></A
 ><H3
 ><A
@@ -1276,7 +1276,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1864"
+NAME="AEN1876"
 ></A
 ><H3
 ><A
@@ -1407,7 +1407,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1895"
+NAME="AEN1907"
 ></A
 ><H3
 ><A
@@ -1543,7 +1543,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1928"
+NAME="AEN1940"
 ></A
 ><H3
 ><A
@@ -1694,7 +1694,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1964"
+NAME="AEN1976"
 ></A
 ><H3
 ><A
@@ -1831,7 +1831,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN1997"
+NAME="AEN2009"
 ></A
 ><H3
 ><A
