@@ -151,6 +151,14 @@ platform, get in touch with me to upload the package. I will keep them in the
 href="http://cvs.gnome.org/lxr/source/libxslt/ChangeLog">Changelog</a> file
 for a really accurate description</h3>
 
+<h3>0.6.0: Mar 22 2001</h3>
+<ul>
+  <li>another beta</li>
+  <li>requires 2.3.5, which provide XPath expression compilation support</li>
+  <li>document() extension should fonction properly</li>
+  <li>fixed a number or reported bugs</li>
+</ul>
+
 <h3>0.5.0: Mar 10 2001</h3>
 <ul>
   <li>fifth beta</li>
